<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:padding="5dp"
            android:text="@string/mark_title"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_delete"
            android:onClick="delete_all"/>

    </RelativeLayout>
    <ListView
        android:paddingTop="5dp"
        android:paddingHorizontal="16dp"
        android:id="@+id/mark_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <TextView
        android:id="@+id/nomarkdata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/nomarkdata"
        android:textSize="20sp" />
</LinearLayout>