<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:padding="5dp"
            android:text="@string/mark_title"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_refresh" />

    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nomark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomark"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingBottom="16dp"/>

    </LinearLayout>

</LinearLayout>